Fix the password modal width on mobile

--- a/resources/assets/sass/partials/layout-tweaks.sass
+++ b/resources/assets/sass/partials/layout-tweaks.sass
@@ -13,6 +13,9 @@ pre code
 
 .modal-card
     overflow: auto
+    width: 476px
+    max-width: 90%
+    margin: 0 auto
 
 input
     min-width: 0
